@@ -3011,3 +3011,6 @@ ATS V1.5:
 
     BUG-67226. HADOOP-13565. KerberosAuthenticationHandler#authenticate should
     not rebuild SPN based on client request. Contributed by Xiaoyu Yao.
+
+    BUG-65978. YARN-3591. Resource localization on a bad disk causes subsequent
+    containers failure. Contributed by Lavkesh Lahngir.
